@@ -1,3 +1,8 @@
+2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* modemlights.c: (destroy_cb), (modemlights_applet_fill):
+	Plug leaks. Closes bug #148712.
+
 2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* modemlights.c (destroy_cb): Free the MLData structure so
